.deploy/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: deploy-sample-gateway
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    port: 8080
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: deploy-sample-http-route
spec:
  parentRefs:
  - name: deploy-sample-gateway
  rules:
  - matches:
    - path:
        type: Exact
        value: /
